--- a/index.html
+++ b/index.html
@@ -6,22 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joelho de porco</title>
     <link rel="stylesheet" href="./assets/css/style.css">
-    <img src=".\assets\Image\Imagem_capa.png" alt="">
+    <img src="" alt="">
 </head>
 <body>
 
     <header>
         <h1 class="titulo"> Joelho de Porco</h1>
         <span> Mais de incríveis 18 anos sem sucesso </span>
-        <a href="#"> Saiba mais</a>
+        <a href="#" class="button"> Saiba mais</a>
         <img src="..\assets\Image\primeira_imagem.jpeg" alt="Fotos do joelho">
-
     </header>
+
+    
+    
 
     <section1>
         <img src="..\assets\Image\primeiro_album.png" 
         alt="Álbum São Paulo">
-
 
     </section1>
 
