alteracoes feitas com sucesso, arquivos 2 são os atualizados

--- a/index2.html
+++ b/index2.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joelho de porco</title>
+    <h1 id="titulo"> Joelho de Porco</h1>
     <link rel="stylesheet" href="./assets/css/style2.css">
     <img src="" alt="">
     
@@ -14,7 +15,26 @@
 <div id="header"></div>
 
 <div id="conteudo">
-    <div id="disco" class="caixa">Lorem ipsum</div>
+    <div id="intro">
+        <img id="imagem_inicial"class="imagem_um" src="..\assets\Image\primeira_imagem.jpeg" alt="Fotos do joelho">
+        <div id="texto_intro" class="primeiro_texto" > Lorem Ipsum</div>
+    </div>
+    <div id="caixa1" class="caixa_disco"> 
+        <img src="..\assets\Image\primeiro_album.png" id="disco_1" class="disco"
+        alt="Álbum São Paulo">
+        <div id="texto1" class="textinho">  Ô Tiro lei </div></div>
+    <div id="caixa2" class="caixa_disco">
+        <img src="..\assets\Image\segundo_album.png" id="disco_2" class="disco"
+        alt="Álbum Joelho de porco">
+        <div id="texto2" class="textinho">Lorem ipsum</div></div>
+    <div id="caixa3" class="caixa_disco">
+        <img src="..\assets\Image\terceiro_album.png" id="disco_3" class="disco"
+        alt="Álbum Joelho de porco"> 
+        <div id="texto3" class="textinho">Lorem ipsum</div></div>
+    <div id="caixa4" class="caixa_disco">
+        <img src="..\assets\Image\quarto_album.png" id="disco_4" class="disco"
+        alt="Álbum 18 anos sem sucesso">
+        <div id="texto4" class="textinho">Lorem ipsum</div></div>
 
 
 </div>
