Animações, fazer animações nos albuns (saindo um cd de cada), acertar fomratações de px para rem, de absoluto para relativo.

--- a/index2.html
+++ b/index2.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joelho de porco</title>
-    <h1 id="titulo"> Joelho de Porco</h1>
     <link rel="stylesheet" href="./assets/css/style2.css">
     <img src="" alt="">
     
@@ -13,8 +12,9 @@
 <body>
 
 <div id="header"></div>
-
+<h1 id="titulo"> Joelho de Porco</h1>
 <div id="conteudo">
+    <a href="#" class="button"> Saiba mais</a>
     <div id="intro">
         <img id="imagem_inicial"class="imagem_um" src="..\assets\Image\primeira_imagem.jpeg" alt="Fotos do joelho">
         <div id="texto_intro" class="primeiro_texto" > Lorem Ipsum</div>
