Acertar imagem a vitrola

--- a/index2.html
+++ b/index2.html
@@ -17,24 +17,38 @@
     <a href="#" class="button"> Saiba mais</a>
     <div id="intro">
         <img id="imagem_inicial"class="imagem_um" src="..\assets\Image\primeira_imagem.jpeg" alt="Fotos do joelho">
-        <div id="texto_intro" class="primeiro_texto" > Lorem Ipsum</div>
+        <div id="texto_intro" class="primeiro_texto" > Joelho de Porco é uma banda brasileira de rock formada em 1972 em São Paulo,
+            famosa por seu ecletismo musical e poético. O joelho teve sua importância social e musical dentro da evolução melódica brasileira. 
+        A banda desde sempre mostrou sua atitude punk, tanto pelas letras quanto pelo estilo arrojado de se vestir e atuar em cima do palco,
+        muito se devia ao seu líder e alma do grupo Tico Terpins. 
+        Vale ressaltar que hoje por mais comum que seja ouvir Mamonas Assassinas, Ultraje a Rigor ou Rogérinho Skylab, nos anos 70 não era parte 
+        da realidade se ouvir canções sobre fiapos de manga, trombadinhas do centro de São Paulo e a poluição. </div>
     </div>
+
     <div id="caixa1" class="caixa_disco"> 
+        <div id="texto1" class="textinho">Lorem ipsum</div>
         <img src="..\assets\Image\primeiro_album.png" id="disco_1" class="disco"
         alt="Álbum São Paulo">
-        <div id="texto1" class="textinho">  Ô Tiro lei </div></div>
+        <img src "..\assets\Image\vitrola_desenho.png" id="vitrola1" class="vitrola"
+        alt="Imagem de vitrola"></div>
     <div id="caixa2" class="caixa_disco">
+        <div id="texto2" class="textinho">Lorem ipsum</div>
         <img src="..\assets\Image\segundo_album.png" id="disco_2" class="disco"
         alt="Álbum Joelho de porco">
-        <div id="texto2" class="textinho">Lorem ipsum</div></div>
+        <img src "..\assets\Image\vitrola_desenho.png" id="vitrola2" class="vitrola"
+        alt="Imagem de vitrola"></div>
     <div id="caixa3" class="caixa_disco">
+        <div id="texto3" class="textinho">Lorem ipsum</div>
         <img src="..\assets\Image\terceiro_album.png" id="disco_3" class="disco"
-        alt="Álbum Joelho de porco"> 
-        <div id="texto3" class="textinho">Lorem ipsum</div></div>
+        alt="Álbum Joelho de porco">
+        <img src "..\assets\Image\vitrola_desenho.png" id="vitrola3" class="vitrola"
+        alt="Imagem de vitrola"></div>
     <div id="caixa4" class="caixa_disco">
+        <div id="texto4" class="textinho">Lorem ipsum</div>
         <img src="..\assets\Image\quarto_album.png" id="disco_4" class="disco"
         alt="Álbum 18 anos sem sucesso">
-        <div id="texto4" class="textinho">Lorem ipsum</div></div>
+        <img src "..\assets\Image\vitrola_desenho.png" id="vitrola4" class="vitrola"
+        alt="Imagem de vitrola"></div>
 
 
 </div>
