--- a/index2.html
+++ b/index2.html
@@ -27,34 +27,36 @@
     </div>
 
     <div id="caixa1" class="caixa_disco"> 
+        <img src="..\assets\Image\vitrola_desenho.jpeg" id="vitrola1" class="vitrola"
+        alt="Imagem de vitrola">
         <div id="texto1" class="textinho">Lorem ipsum</div>
         <img src="..\assets\Image\primeiro_album.png" id="disco_1" class="disco"
         alt="Álbum São Paulo">
-        <!--<img src "..\assets\Image\vitrola_desenho.png" id="vitrola1" class="vitrola"
-        alt="Imagem de vitrola">--></div>
+        </div>
     <div id="caixa2" class="caixa_disco">
         <div id="texto2" class="textinho">Lorem ipsum</div>
         <img src="..\assets\Image\segundo_album.png" id="disco_2" class="disco"
         alt="Álbum Joelho de porco">
-        <!--<img src "..\assets\Image\vitrola_desenho.png" id="vitrola2" class="vitrola"
-        alt="Imagem de vitrola">--></div>
+        <img src="..\assets\Image\vitrola_desenho.jpeg" id="vitrola2" class="vitrola"
+        alt="Imagem de vitrola"></div>
     <div id="caixa3" class="caixa_disco">
         <div id="texto3" class="textinho">Lorem ipsum</div>
         <img src="..\assets\Image\terceiro_album.png" id="disco_3" class="disco"
         alt="Álbum Joelho de porco">
-        <!--<img src "..\assets\Image\vitrola_desenho.png" id="vitrola3" class="vitrola"
-        alt="Imagem de vitrola">--></div>
+        <img src="..\assets\Image\vitrola_desenho.jpeg" id="vitrola3" class="vitrola"
+        alt="Imagem de vitrola"></div>
     <div id="caixa4" class="caixa_disco">
         <div id="texto4" class="textinho">Lorem ipsum</div>
         <img src="..\assets\Image\quarto_album.png" id="disco_4" class="disco"
         alt="Álbum 18 anos sem sucesso">
+        <img src="..\assets\Image\vitrola_desenho.jpeg" id="vitrola4" class="vitrola"
+        alt="Imagem de vitrola">
         </div>
 
 
 </div>
 
-<img src "..\assets\Image\vitrola_desenho.jpeg" id="vitrola4" class="vitrola"
-        alt="Imagem de vitrola">
+
 
 
 </body>
